WIP breakpoints; show object mappings

--- a/inject/Cargo.toml
+++ b/inject/Cargo.toml
@@ -12,6 +12,7 @@ ctor = "0.1"
 libc = "0.2"
 inject-types = { path = "../inject-types" }
 bincode = "1.2"
+itertools = "0.8"
 
 [build-dependencies]
 cc = "1.0"
