--- a/ruskcov/Cargo.toml
+++ b/ruskcov/Cargo.toml
@@ -11,3 +11,7 @@ structopt = "0.3.3"
 gimli = "0.19.0"
 nix = "0.15.0"
 object = "0.15.0"
+inject-types = { path = "../inject-types" }
+bincode = "1.2"
+tempfile = "3.1"
+anyhow = "1.0"
