--- a/inject/Cargo.toml
+++ b/inject/Cargo.toml
@@ -13,6 +13,7 @@ libc = "0.2"
 inject-types = { path = "../inject-types" }
 bincode = "1.2"
 itertools = "0.8"
+findshlibs = "0.5"
 
 [build-dependencies]
 cc = "1.0"
