--- a/ruskcov/Cargo.toml
+++ b/ruskcov/Cargo.toml
@@ -16,3 +16,7 @@ bincode = "1.2"
 tempfile = "3.1"
 anyhow = "1.0"
 memmap = "0.7"
+smallvec = "1.0.0"
+intervaltree ="0.2"
+lazycell = "1.2.1"
+fallible-iterator = "0.2.0"
