--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ lto = true
 
 [patch.crates-io]
 object = { git = "https://github.com/gimli-rs/object" } # updated dependencies
-goblin = { git = "https://github.com/jsgf/goblin.git" } # fix broken pt_interp
+#goblin = { git = "https://github.com/jsgf/goblin.git" } # fix broken pt_interp
