--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,4 @@ members = ["ruskcov", "inject", "inject-types"]
 lto = true
 
 [patch.crates-io]
-object = { git = "https://github.com/gimli-rs/object" } # updated dependencies
-#goblin = { git = "https://github.com/jsgf/goblin.git" } # fix broken pt_interp
+object = { git = "https://github.com/jsgf/object.git", branch = "segment-offset" } # updated dependencies; added offset
