--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,4 @@ members = ["ruskcov", "inject", "inject-types"]
 lto = true
 
 [patch.crates-io]
-nix = { git = "https://github.com/nix-rust/nix.git" }
-findshlibs = { path = "../findshlibs" }
+findshlibs = { git = "https://github.com/gimli-rs/findshlibs.git" }
